--- a/src/components/FriendCard/style.css
+++ b/src/components/FriendCard/style.css
@@ -29,19 +29,10 @@
   list-style-type: none;
 }
 
-.card > .content > ul > li {
-  margin-top: 18px;
-}
-
-.card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.card > .remove:hover {
-  color: #d50000;
+.img-thumbnail:hover {
+  background-color: blueviolet;
+  opacity: 1;
+  }
+.img-container:hover{
+  transform: scale(1.1);
 }
